--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Waterloo Ontario · (226) 606-1925 ·
-                        <a href="mailto:name@email.com">mena.azab@uwaterloo.ca</a>
+                        <a href="mailto:mena.azab@uwaterloo.ca">mena.azab@uwaterloo.ca</a>
                     </div>
                     <p class="lead mb-5">I am a Mechatronics Engineering student at the University of Waterloo, with a keen interest in robotics and electronics design. Outside of my studies, I enjoy exploring emerging technologies, such as Web3 and Cryptocurrency.</p>
                     <div class="social-icons">
